--- a/04-机器学习数分析/电影评论情感分析.ipynb
+++ b/04-机器学习数分析/电影评论情感分析.ipynb
@@ -2,10 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from pandas import Series, DataFrame\n",
+    "\n",
+    "from sklearn.datasets import load_files"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "reviews_train = load_files(\"data/a\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "参数太多 - 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!tree -L 2 data/aclImdb"
+   ]
   }
  ],
  "metadata": {
